2009-08-22  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-get-username): add
	(twittering-get-password): changed prompt

2009-08-19  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(twittering-image-type):
	Use external 'file' program if available to detect image types,
	and store the results in memory to avoid having to call it once
	and again.
	(twittering-format-status):
	Pass full image path to `twittering-image-type'

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el (twittering-http-get)
	(twittering-http-get-default-sentinel)
	(twittering-get-timeline, twittering-mode-map)
	(twittering-current-timeline-noninteractive)
	(twittering-current-timeline, twittering-erase-old-statuses):
	Get rid of the `twittering-last-timeline-interactive' global
	variable.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-sign-simple-string)
	(twittering-sign-string-default-function)
	(twittering-sign-string-function, twittering-sign-string): Add
	new.
	(twittering-update-status-if-not-blank): Fix params, support sign.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-mode-map)
	(twittering-format-status, twittering-retweet): Add new feature
	ReTweet

2009-06-18  Alberto Garcia  <agarcia@igalia.com>

	* twittering-mode.el
	(twittering-status-to-status-datum):
	Read 'in_reply_to_status_id' and 'in_reply_to_user_id' attributes.
	(twittering-format-status):
	Add new '%r' format string for " in reply to user".
	(twittering-update-status-if-not-blank):
	Code refactoring. No need to use (format) to convert a string.

2009-06-18  Tsuyoshi CHO  <Tsuyoshi.CHO+develop@Gmail.com>

	* twittering-mode.el (twittering-status-format)
	(twittering-format-status, twittering-status-to-status-datum)
	(twittering-update-status-if-not-blank, twittering-enter): Fix
	in_reply_to_status_id support not work problem, and marge Alberl
	patch below.
